idea/testData/gradle/newMultiplatformHighlighting/first/src/commonMain/kotlin/My.kt
expect class <error descr="[NO_ACTUAL_FOR_EXPECT] Expected class 'My' has no actual declaration in module first_jsMain for JS"><lineMarker>My</lineMarker></error> {
    fun <lineMarker>foo</lineMarker>()
}